fixed all mobile design with precision: working on stretch

--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -190,7 +190,7 @@ p {
 }
 @media (max-width: 500px) {
   .navigation .navbar {
-    width: 80%;
+    width: 75%;
   }
   .navigation .navbar a {
     font-size: 1.5rem;
@@ -217,6 +217,13 @@ footer {
 .home .intro p {
   padding: 0 15px;
 }
+@media (max-width: 500px) {
+  .home .intro h2,
+  .home .intro p {
+    padding-left: 14px;
+    padding-right: 14px;
+  }
+}
 .home .space-images {
   display: flex;
   justify-content: flex-start;
@@ -230,11 +237,9 @@ footer {
   height: 100%;
 }
 @media (max-width: 500px) {
-  .home .space-images {
-    width: 90%;
-  }
   .home .space-images .blast {
-    width: 90%;
+    width: 100%;
+    margin: 20px 5%;
   }
   .home .space-images .sky,
   .home .space-images .launch {
@@ -249,11 +254,6 @@ footer {
 }
 .home .visit-planets p {
   margin-top: 13px;
-}
-@media (max-width: 500px) {
-  .home .visit-planets {
-    width: 90%;
-  }
 }
 .home .walk {
   margin-top: 60px;
@@ -294,8 +294,9 @@ footer {
 }
 @media (max-width: 500px) {
   .home .walk {
-    width: 90%;
     flex-direction: column;
+    padding: 20px 15px;
+    margin-top: 10px;
   }
   .home .walk .walk-text {
     order: 2;
@@ -303,5 +304,10 @@ footer {
   }
   .home .walk .walk-text .btn button {
     width: 100%;
+    padding: 20px 0;
+  }
+  .home .walk .walk-img {
+    width: 100%;
+    margin: 0;
   }
 }
