--- a/docs/less/navigation.less
+++ b/docs/less/navigation.less
@@ -29,7 +29,7 @@
     }
 
     @media @mobile {
-      width: 80%;
+      width: 75%;
       a {
       font-size: 1.5rem;
       }
